--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,42 @@
+*{
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    list-style: none;
+}
 body {
-    background-color: skyblue;
+    background-color: rgb(113, 143, 154);
+}
+.GTitle{
+    font-size: 70px;
+    color: #f6f6f6;
+}
+.Logo{
+    width: 11rem;
+    height: 6rem;
+}
+
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 5% 0 5%;
+}
+header img{
+    margin-top: 0.5rem;
+}
+header ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    margin-right: 6rem;
+}
+header ul li a{
+    font-size: 25px;
+    color: #f6f6f6;
+}
+#base{
+    display: flex;
+    justify-content: center;
 }
