--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -30,7 +30,7 @@ header ul{
     justify-content: center;
     align-items: center;
     gap: 2rem;
-    margin-right: 6rem;
+    /* margin-right: 6rem; */
 }
 header ul li a{
     font-size: 25px;
